Replace HTML Code with JS generated one

--- a/index.html
+++ b/index.html
@@ -14,51 +14,51 @@
                 Notizbuch
             </div>
             <ul id="main_list">
-                <li>
+                <!--<li name="listEntry">
                     <div name="proceedings1">
                         <div name="header1" class="header">
                             <table>
                                 <tr>
                                     <td> <img width="16px" src="assets/001-interface.png"/></td>
                                     <td >
-                                        <input type="text" value="Titel1" disabled="true" class="fieldentry title">
+                                        <input id="title1" type="text" value="Titel1" class="fieldentry title">
                                     </td>
                                 </tr>
                                 <tr>
                                     <td><img width="16px" src="assets/003-time.png"/></td>
-                                    <td > <input type="text" value="01.01.2001" disabled="true" class="fieldentry"></td>
+                                    <td > <input id="date1" type="text" value="01.01.2001" class="fieldentry"></td>
                                 </tr>
                                 <tr>
                                     <td><img width="16px" src="assets/002-users.png"/></td>
-                                    <td ><input type="text" value="Vorname1 Nachname1, Vorname2, Nachname2" disabled="true" class="fieldentry"></td>
+                                    <td ><input id="names1" type="text" value="Vorname1 Nachname1, Vorname2, Nachname2" class="fieldentry"></td>
                                 </tr>
                             </table>
-                            <button id="button1">
+                            <button type="button" id="button1">
                                 <img src="assets/001-draw.png" alt="">
                             </button>
                         </div>
                         <div name="Text1">
-                            <textarea>- Punkt1 &#10;- Punkt2&#10;- Punkt3</textarea>
+                            <textarea id="textarea1">- Punkt1 &#10;- Punkt2&#10;- Punkt3</textarea>
                         </div>
                     </div>
                 </li>
-                <li>
+                <li name="listEntry">
                     <div name="proceedings2">
                         <div name="header" class="header">
                             <table>
                                 <tr>
                                     <td> <img width="16px" src="assets/001-interface.png"/></td>
                                     <td >
-                                        <input type="text" value="Titel2" disabled="true" class="fieldentry title">
+                                        <input id="title2" type="text" value="Titel2" class="fieldentry title">
                                     </td>
                                 </tr>
                                 <tr>
                                     <td><img width="16px" src="assets/003-time.png"/></td>
-                                    <td > <input type="text" value="01.01.2001" disabled="true" class="fieldentry"></td>
+                                    <td > <input id="date2" type="text" value="01.01.2001" class="fieldentry"></td>
                                 </tr>
                                 <tr>
                                     <td><img width="16px" src="assets/002-users.png"/></td>
-                                    <td ><input type="text" value="Vorname1 Nachname1, Vorname2, Nachname2" disabled="true" class="fieldentry"></td>
+                                    <td ><input id="names2" type="text" value="Vorname1 Nachname1, Vorname2, Nachname2" class="fieldentry"></td>
                                 </tr>
                             </table>
                             <button id="button2">
@@ -66,12 +66,13 @@
                             </button>
                         </div>
                         <div name="Textbox">
-                            <textarea>- Punkt1 &#10;- Punkt2&#10;- Punkt3</textarea>
+                            <textarea  id="textarea2">- Punkt1 &#10;- Punkt2&#10;- Punkt3</textarea>
                         </div>
                     </div>
-                </li>
+                </li>-->
             </ul>
         </section>
         <button id="add">+</button>
     </body>
+    <script type="text/javascript" src="script.js"></script>
 </html>
